fixed the space between the img and navbar with vertical-align: bottom;

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,75 +1,64 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
 
-* {
-	margin: 0;
-	padding: 0;
-}
-
-
 /*..........................head nav bar */
 
 .chanel-logo {
 	overflow: hidden;
-	text-align: center;
+	padding-left: 2rem;
 }
 
 img{
-	display: block;
-	width: 100%;
-	height: 500px;
-	margin: auto;
+	object-fit: contain;
+	vertical-align: bottom;
+
+}
+.navbar-center{
+	padding: 0 5%;
+
 }
 
 nav {
-	text-align: right;
 	background-color: #ca041a;
-	padding: 10px;
+	padding: 1px;
+	border-radius: 20px;
 }
 
+
 .nav-header li {
-	display: inline;
+	display: inline-block;
 	text-align: center;
 }
 
 .nav-header li a {
 	color: #fafafa;
-	font-size: 25px;
-	padding: 5%;
-	margin: 5px;
+	font-size: 1.25rem;
+	padding: 6rem;
 	text-decoration: none;
 	font-family: "Oxygen", sans-serif;
 }
 
-#chanel-logo {
-	position: relative;
-}
 
 .nav-header li a:hover {
 	color: #cccccc;
 }
 
-#navbar-text {
-	width: 100%;
-	text-align: center;
-	display: inline-block;
-}
 
 /* .................................hero image */
 
-#hero-img{
+#banner-img{
 	
-	animation-name: hero-zoom;
+	animation-name: zoom-in;
     animation-duration: 5s;
-    animation-fill-mode: backwards;
+    animation-fill-mode: forwards;
 }
 
 
-@keyframes hero-zoom {
+@keyframes zoom-in {
     from{
-        transform: scale(1.1);
+        transform: scale(1);
     }
     to{
-        transform: scale(1);
+        transform: scale(1.1);
     }
 }
 /* .................................What is chanels cause */
@@ -111,6 +100,14 @@ video{
 
 /* .................................footer */
 
+footer {
+	background-color: #ca041a;
+}
+.footer-center{
+	padding: 0 5%;
+}
+
+
 .social-media {
 	text-align: center;
 }
@@ -128,14 +125,6 @@ video{
 
 .social-media i:hover {
 	color: #cccccc;
-}
-
-#stuck-footer {
-	position: relative;
-	bottom: 0;
-	left: 0;
-	background-color: #ca041a;
-	width: 100%;
 }
 
 
